--- a/prepros.config
+++ b/prepros.config
@@ -903,6 +903,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "src/styles.scss",
+        "config": {
+          "customOutput": "src\\styles.css"
+        }
+      }
+    ]
   }
 }
