--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^10.0.1",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
     "@angular/google-maps": "^9.0.1",
     "@angular/localize": "~9.1.9",
+    "@angular/material": "^10.0.1",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
